@@ -1,0 +1,4 @@
+Deckhand
+========
+A foundational python REST YAML processing engine providing data and secrets
+management to other platform services.
